MomotalkSource.theme.css
/* ... */
.wrapper_fc8177 {
    display: none;
}

/* Send Button */
.sendIcon_aa63ab {
    width: 80px !important;
    background-image: url("https://miyakukage.github.io/discord-momotalk/img/sendButton.png");
    background-size: 80px;
    height: 34px !important;
}

.button_aa63ab:has(.sendIcon_aa63ab):hover {
    background-color: transparent !important;
}

.sendIcon_aa63ab:hover {
    filter: brightness(1.15);
}

.noHover__24af7 .sendIcon_aa63ab:hover {
    filter: none;
}

.sendIcon_aa63ab > * {
    display: none;
}

/* Hide everything inside */
.preview__3e443 > * {
    display: none !important;
}

/* Add your replacement image */
.preview__3e443::before {
    content: "";
    display: block;
    width: 100%; /* set your size */
    height: 100%;
    background: url("https://miyakukage.github.io/discord-momotalk/img/kohawarn.png")
        no-repeat center center;
    background-size: contain; /* or cover */
}
.chat_f75fb0 {
    background-color: var(--channeltopbar) !important;
}

/* Arona in main chat AND background*/
.chatContent_f75fb0 {
    background-image: var(--bgcharacter), var(--bgimage) !important;
    background-size:
        auto 80%,
        cover !important;
    background-repeat: no-repeat, no-repeat !important;
    background-position:
        var(--bgcharacterposition),
        center center !important;
    background-attachment: fixed, fixed !important;
    background-color: var(--backgroundcolor) !important;
}
.chatGradient__36d07 {
    background: var(--backgroundcolor) !important;
}

.voiceCallWrapper_a21736 {
    background-image: var(--callimage) !important;
    background-size: contain !important;
    background-repeat: no-repeat !important;
    background-attachment: fixed !important;
}
/* killing wumpus */
.addFriendWumpusWrapper__72ba7 img {
    visibility: hidden;
}

.addFriendWumpusWrapper__72ba7::after {
    content: "";
    position: absolute;
    bottom: -300%;
    left: 90%;
    width: 800%;
    height: 800%;
    background-size: contain !important;
    background-repeat: no-repeat !important;
    background-image: url("https://miyakukage.github.io/discord-momotalk/img/tinyarona.png");
    background-size: cover;
    pointer-events: none;
}

/* Colors */

.themedBackground__74017 {
    /* Typing area */
    background-color: var(--senseimessagebubble) !important;
}
.placeholder__1b31f {
    --channel-text-area-placeholder: var(--interactive-text-default);
}
.attachButtonInner__0923f svg {
    color: var(--messagefontcolor);
}
.placeholder__1b31f.slateTextArea_ec4baf.fontSize16Padding__74017 {
    color: var(--messagefontcolor);
}
.theme-dark.scrollbarGhostHairline__506b3.scrollbar__506b3.hljs {
    /* Code Block */
    background-color: rgb(35, 67, 84) !important;
    color: rgb(219, 219, 219) !important;
}
.panels__5e434 {
    /* User Thing */
    background-color: var(--momotalkbanner) !important;
    border: none;
}
.activeButtonChild_aa63ab {
    color: var(--messagefontcolor);
}

.wrapper_ef3116.guilds__5e434 {
    /* server list */
    background-color: var(--serverlist);
}

/*Home Image*/
.wrapper_cc5dd2:hover .childWrapper__6e9f8,
.childWrapper__6e9f8 {
    background-color: transparent;
}

.theme-dark .button_f7ecac {
    color: black;
}

/*replace with colour if you want a colour behind your image */
#app-mount .tutorialContainer__1f388 .childWrapper__6e9f8 {
    background-image: url("https://miyakukage.github.io/discord-momotalk/img/home.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.childWrapper__6e9f8 svg {
    display: none;
}

.childWrapper__6e9f8.childWrapperNoHoverBg__6e9f8 {
    background-color: transparent !important;
}

.listItemWrapper__91816.selected_dfb2f8 {
    background-color: #66778b !important;
}

/* Fixing Discord's Mess... again... */
.title_c38106 {
    display: flex;
    justify-content: left;
    margin-left: 20px;
    align-items: center;
    position: absolute;
    bottom: 0;
}

/* Hiding broken gradient in typing */
.chatTypingGradientAtBottom__36d07.chatGradientBase__36d07 {
    display: none;
}

/* Momotalk Icon */
.base__5e434:has(.privateChannels_e6b769) .title_c38106 {
    position: absolute; /* Or fixed if it should stay visible at all times */
    background-image: url("https://miyakukage.github.io/discord-momotalk/img/logo.png");
    background-size: contain;
    background-position: left !important;
    background-repeat: no-repeat;
    background-position: center;
}

.base__5e434:has(.privateChannels_e6b769) .title_edbb22 {
    display: none;
}

/* Top bar */
.bar_c38106 {
    background-color: var(--momotalkbanner);

    margin-right: 10px;

    /* the little discord icon as well as inbox and help */
    path {
        fill: var(--messagefontcolor);
    }

    /* direct message text */
    .lineClamp1__4bd52 {
        color: var(--messagefontcolor);
    }

    /* the aria labels explain themselves */
    [aria-label="Minimize"] rect {
        fill: var(--messagefontcolor);
    }

    [aria-label="Maximize"] rect {
        stroke: var(--messagefontcolor);
    }

    [aria-label="Close"] polygon {
        fill: var(--messagefontcolor);
    }
}

/* Message font */
.markup__75297 {
    color: var(--messagefontcolor);
}

/* Usernames */
.username_c19a55 {
    font-weight: 600 !important;
    text-shadow:
        -1px -1px 0 var(--usernameoutline),
        1px -1px 0 var(--usernameoutline),
        -1px 1px 0 var(--usernameoutline),
        1px 1px 0 var(--usernameoutline);
}
/* Remove outline for user with effects */
.username_c19a55 span {
    text-shadow: none;
}

/* DM List */
.membersWrap_c8ffbb {
    background-color: var(--dmlist) !important;
    scrollbar-color: transparent transparent;
    border-right: solid;
    border-color: #dddddd;

    .selected_bf202d {
        background-color: #dbe4eb !important;
    }

    .username__703b9 {
        font-weight: bold;
    }
    .activityText__972a0 {
        color: #62676b;
    }
}
/* ... */

